--- a/src/epub/css/core.css
+++ b/src/epub/css/core.css
@@ -30,8 +30,8 @@ hr{
 	width: 25%;
 }
 
-q:before,
-q:after{
+q::before,
+q::after{
 	content: '';
 }
 
@@ -50,7 +50,6 @@ h6{
 }
 
 blockquote + p,
-blockquote p:first-child,
 h2 + p,
 h3 + p,
 h4 + p,
@@ -58,7 +57,10 @@ h5 + p,
 h6 + p,
 header + p,
 hr + p,
-section[epub|type~="rearnotes"] > ol > li > p:first-child{
+ol + p,
+ul + p,
+table + p,
+p:first-child{
 	text-indent: 0;
 }
 
@@ -132,7 +134,7 @@ a.raw-url{
 	-epub-hyphens: none;
 }
 
-section[epub|type~="colophon"] p + p:before{
+section[epub|type~="colophon"] p + p::before{
 	border-top: 1px solid;
 	content: "";
 	display: block;
