Include CSS for formatting calling cards and added appropriate HTML. Re-ran some tools after pulling latest version.

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -48,3 +48,31 @@ footer{
 .signature{
 	font-variant: small-caps;
 }
+
+.card header p {
+	/*margin: 1em 0;*/
+	text-align: left;
+}
+
+.card {
+	border: 1px solid;
+	padding: 1em;
+	text-align: center;
+}
+
+.card p {
+	text-indent: 0;
+}
+
+.card b {
+	font-variant: small-caps;
+}
+
+.footer-left{
+	float: left;
+}
+
+.footer-right{
+	float: right;
+}
+
