--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -5,10 +5,6 @@ abbr.era{
 	font-variant: small-caps;
 }
 
-abbr.name{
-	white-space: nowrap;
-}
-
 span[epub|type~="subtitle"]{
 	display: block;
 	font-weight: normal;
@@ -53,7 +49,7 @@ footer{
 	font-variant: small-caps;
 }
 
-.card header p{
+.card header{
 	text-align: left;
 }
 
@@ -65,10 +61,6 @@ footer{
 
 .card p{
 	text-indent: 0;
-}
-
-b{
-	font-variant: small-caps;
 }
 
 .card footer p{
