--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -5,6 +5,12 @@ abbr.era{
 	font-variant: small-caps;
 }
 
+section[epub|type~="halftitlepage"] span[epub|type~="subtitle"]{
+	display: block;
+	font-size: .75em;
+	font-weight: normal;
+}
+
 span[epub|type~="subtitle"]{
 	display: block;
 	font-weight: normal;
