--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -39,6 +39,10 @@ footer{
 	text-align: left;
 }
 
+[epub|type~="z3998:salutation"] + p{
+	text-indent: 0;
+}
+
 [epub|type~="z3998:salutation"],
 [epub|type~="z3998:signature"]{
 	font-variant: small-caps;
